# Matica

./: CMakeLists.txt  README.md  analysis.cpp  basics.cpp  correlation.cpp  graphing.cpp  main.cpp  matrices.cpp  operations.cpp  statements.cpp  trigonometry.cpp  trigonometry.h
headers/: analysis.h  basics.h  correlation.h  graphing.h  matrices.h  operations.h  statements.h
